--- a/9/lib/sparky-aptus-appcenter/accessories-weather.html
+++ b/9/lib/sparky-aptus-appcenter/accessories-weather.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 24, 2021 by pavroo
+Last update: October 22, 2025 by pavroo
 -->
 	<head>
 		<title>Accessories -> Weather | APTus AppCenter</title>
@@ -50,10 +50,12 @@ Last update: September 24, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accwea_meteo-qt" class="button1"><img src="images/weather.svg" class="appicon"><br />Meteo-Qt</a>
 		</td>
-		<td><a href="aptus://accwea_weather-util" class="button1"><img src="images/terminal.svg" class="appicon"><br />Weather Util</a>
+		<td><a href="aptus://accwea_mousam" class="button1"><img src="images/weather.svg" class="appicon"><br />Mousam</a>
 		</td>
 	</tr>
-	<tr>
+	<tr>	
+		<td><a href="aptus://accwea_weather-util" class="button1"><img src="images/terminal.svg" class="appicon"><br />Weather Util</a>
+		</td>
 		<td><a href="aptus://accwea_wmweather+" class="button1"><img src="images/weather.svg" class="appicon"><br />WMWeather+</a>
 		</td>
 		<td><a href="aptus://accwea_xfce4-weather-plugin" class="button1"><img src="images/weather.svg" class="appicon"><br />Xfce4 Weather Plugin</a>
