--- a/9/lib/sparky-aptus-appcenter/desktops.html
+++ b/9/lib/sparky-aptus-appcenter/desktops.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 21, 2025 by pavroo
+Last update: October 22, 2025 by pavroo
 -->
 	<head>
 		<title>Desktops | APTus AppCenter</title>
@@ -100,8 +100,8 @@ Last update: August 21, 2025 by pavroo
 	<tr>
 		<td><a href="aptus://environment_trinity" class="button1"><img src="images0/tde.png" class="appicon"><br />Trinity</a>
 		</td>
-		<!--<td><a href="aptus://environment_ukui" class="button1"><img src="images0/ukui.png" class="appicon"><br />UKUI</a>
-		</td>-->
+		<td><a href="aptus://environment_ukui" class="button1"><img src="images0/ukui.png" class="appicon"><br />UKUI</a>
+		</td>
 		<td><a href="aptus://environment_wmaker" class="button1"><img src="images0/wmaker.png" class="appicon"><br />WindowMaker</a>
 		</td>
 		<td><a href="aptus://environment_xfce" class="button1"><img src="images0/xfce.png" class="appicon"><br />Xfce</a>
