--- a/9/lib/sparky-aptus-appcenter/graphics-editors.html
+++ b/9/lib/sparky-aptus-appcenter/graphics-editors.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 7, 2025 by pavroo
+Last update: October 22, 2025 by pavroo
 -->
 	<head>
 		<title>Graphics -> Editors | APTus AppCenter</title>
@@ -86,16 +86,18 @@ Last update: September 7, 2025 by pavroo
 		</td>
 		<td><a href="aptus://graedi_lightzone" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />LightZone</a>
 		</td>
+		<td><a href="aptus://graedi_mayo" class="button1"><img src="images/krita.svg" class="appicon"><br />Mayo</a>
+		</td>
 		<td><a href="aptus://graedi_meshlab" class="button1"><img src="images/krita.svg" class="appicon"><br />Meshlab</a>
 		</td>
 		<td><a href="aptus://graedi_mm3d" class="button1"><img src="images/krita.svg" class="appicon"><br />mm3d</a>
 		</td>
 		<td><a href="aptus://graedi_opentoonz" class="button1"><img src="images/totem.svg" class="appicon"><br />OpenToonz</a>
 		</td>
-		<td><a href="aptus://graedi_photoflare" class="button1"><img src="images/krita.svg" class="appicon"><br />Photoflare</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_photoflare" class="button1"><img src="images/krita.svg" class="appicon"><br />Photoflare</a>
+		</td>
 		<td><a href="aptus://graedi_posterazor" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Posterazor</a>
 		</td>
 		<td><a href="aptus://graedi_rapid-raw" class="button1"><img src="images/gcolor2.svg" class="appicon"><br />RapidRAW</a>
@@ -106,10 +108,10 @@ Last update: September 7, 2025 by pavroo
 		</td>
 		<td><a href="aptus://graedi_synfigstudio" class="button1"><img src="images/totem.svg" class="appicon"><br />Synfig Studio</a>
 		</td>
-		<td><a href="aptus://graedi_textdraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Textdraw</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_textdraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Textdraw</a>
+		</td>
 		<td><a href="aptus://graedi_view3dscene" class="button1"><img src="images/krita.svg" class="appicon"><br />View 3D Scene</a>
 		</td>
 		<td><a href="aptus://graedi_wings3d" class="button1"><img src="images/freecad.svg" class="appicon"><br />Wings 3D</a>
