--- a/9/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/9/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 21, 2025 by pavroo
+Last update: October 22, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -40,10 +40,8 @@ Last update: August 21, 2025 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<!--<td><a href="aptus://netweb_badwolf" class="button1"><img src="images/web-browser.svg" class="appicon"><br />BadWolf</a>
-		</td>-->
-		<!--<td><a href="aptus://netweb_beaker-browser" class="button1"><img src="images0/beaker-browser.png" class="appicon"><br />Beaker</a>
-		</td>-->
+		<td><a href="aptus://netweb_badwolf" class="button1"><img src="images/web-browser.svg" class="appicon"><br />BadWolf</a>
+		</td>
 		<td><a href="aptus://netweb_blisk-browser-stable" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Blisk</a>
 		</td>
 		<td><a href="aptus://netweb_brave-browser" class="button1"><img src="images/brave.svg" class="appicon"><br />Brave</a>
@@ -54,10 +52,10 @@ Last update: August 21, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netweb_dillo" class="button1"><img src="images0/dillo.png" class="appicon"><br />Dillo</a>
 		</td>
-		<td><a href="aptus://netweb_dooble" class="button1"><img src="images0/dooble.png" class="appicon"><br />Dooble</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_dooble" class="button1"><img src="images0/dooble.png" class="appicon"><br />Dooble</a>
+		</td>
 		<td><a href="aptus://netweb_elinks" class="button1"><img src="images/terminal.svg" class="appicon"><br />ELinks</a>
 		</td>
 		<td><a href="aptus://netweb_epiphany-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Epiphany</a>
@@ -68,10 +66,10 @@ Last update: August 21, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netweb_firefox-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest Mozilla Build</a>
 		</td>
-		<td><a href="aptus://netweb_floorp" class="button1"><img src="images0/floorp.png" class="appicon"><br />Floorp</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_floorp" class="button1"><img src="images0/floorp.png" class="appicon"><br />Floorp</a>
+		</td>
 		<td><a href="aptus://netweb_google-chrome-stable" class="button1"><img src="images/google-chrome.svg" class="appicon"><br />Google Chrome</a>
 		</td>
 		<td><a href="aptus://netweb_icecat" class="button1"><img src="images0/icecat.png" class="appicon"><br />IceCat</a>
@@ -82,10 +80,10 @@ Last update: August 21, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netweb_librewolf" class="button1"><img src="images0/librewolf.png" class="appicon"><br />Librewolf</a>
 		</td>
-		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
+		</td>
 		<td><a href="aptus://netweb_luakit" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Luakit</a>
 		</td>
 		<td><a href="aptus://netweb_lynx" class="button1"><img src="images/terminal.svg" class="appicon"><br />Lynx</a>
@@ -96,10 +94,10 @@ Last update: August 21, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
 		</td>
-		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
+		</td>
 		<td><a href="aptus://netweb_mullvad-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Mullvad Browser</a>
 		</td>
 		<td><a href="aptus://netweb_netrik" class="button1"><img src="images/terminal.svg" class="appicon"><br />Netrik</a>
@@ -112,10 +110,10 @@ Last update: August 21, 2025 by pavroo
 		</td>-->
 		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
 		</td>
-		<td><a href="aptus://netweb_qutebrowser" class="button1"><img src="images0/qutebrowser.png" class="appicon"><br />qutebrowser</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_qutebrowser" class="button1"><img src="images0/qutebrowser.png" class="appicon"><br />qutebrowser</a>
+		</td>
 		<td><a href="aptus://netweb_seamonkey" class="button1"><img src="images0/seamonkey.png" class="appicon"><br />SeaMonkey</a>
 		</td>
 		<td><a href="aptus://netweb_slimjet" class="button1"><img src="images/slimjet.svg" class="appicon"><br />Slimjet</a>
@@ -128,10 +126,10 @@ Last update: August 21, 2025 by pavroo
 		</td>
 		<!--<td><a href="aptus://netweb_viper-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Viper Browser</a>
 		</td>-->
-		<td><a href="aptus://netweb_vivaldi-stable" class="button1"><img src="images/vivaldi.svg" class="appicon"><br />Vivaldi</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_vivaldi-stable" class="button1"><img src="images/vivaldi.svg" class="appicon"><br />Vivaldi</a>
+		</td>
 		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/terminal.svg" class="appicon"><br />w3m</a>
 		</td>
 		<td><a href="aptus://netweb_waterfox" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox</a>
